[package]
name = "jsonschema"
version = "0.24.0"
description = "JSON schema validaton library"
keywords = ["jsonschema", "validation"]
categories = ["web-programming"]
readme = "../../README.md"
license.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
default = ["resolve-http", "resolve-file"]

resolve-http = ["reqwest"]
resolve-file = []
# Deprecated in favor of `jsonschema-cli`
cli = []
# Deprecated: Drafts 2019-09 & 2020-12 are enabled by default
draft201909 = []
draft202012 = []

[dependencies]
ahash.workspace = true
anyhow = "1.0"
base64 = "0.22"
bytecount = { version = "0.6", features = ["runtime-dispatch-simd"] }
email_address = "0.2.9"
fancy-regex = "0.13"
fraction = { version = "0.15", default-features = false, features = [
  "with-bigint",
] }
idna = "1.0.2"
itoa = "1"
num-cmp = "0.1"
once_cell = "1.20.1"
percent-encoding = "2.3"
regex-syntax = "0.8.5"
reqwest = { version = "0.12", features = [
  "blocking",
  "json",
], default-features = false, optional = true }
referencing = { version = "0.24.0", path = "../jsonschema-referencing" }
serde.workspace = true
serde_json.workspace = true
url.workspace = true
uuid-simd = "0.8"

[dev-dependencies]
benchmark = { path = "../benchmark/" }
codspeed-criterion-compat = { version = "2.7", default-features = false }
criterion = { version = "0.5", default-features = false }
testsuite = { package = "jsonschema-testsuite", path = "../jsonschema-testsuite" }
test-case = "3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
mockito = "1.5"
tempfile = "3.13.0"

[[bench]]
harness = false
name = "jsonschema"

[[bench]]
harness = false
name = "keywords"
