[package]
name = "json_schema_test_suite_proc_macro"
version = "0.3.0"
authors = ["Samuele Maci <macisamuele@gmail.com>"]
edition = "2021"
publish = true
keywords = ["jsonschema"]
categories = ["development-tools::procedural-macro-helpers", "development-tools::testing"]
description = "Procedural Macro Attribute to run all the test cases described in JSON-Schema-Test-Suite"
repository = "https://github.com/macisamuele/json-schema-test-suite-rs"
documentation = "http://docs.rs/json-schema-test-suite-proc-macro"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
path = "src/lib.rs"

[dev-dependencies]
lazy_static = "1"
mockito = "0"
serde_json = "1"

[dependencies]
json_schema_test_suite_test_case = { path = "../test_case", version = "=0.3.0" }
proc-macro2 = "1"
regex = "1"
quote = "1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
syn = "1"
