[package]
name = "json_schema_test_suite_test_case"
version = "0.3.0"
authors = ["Samuele Maci <macisamuele@gmail.com>"]
edition = "2018"
publish = true
keywords = ["jsonschema"]
categories = ["development-tools::procedural-macro-helpers", "development-tools::testing"]
description = "Procedural Macro Attribute to run all the test cases described in JSON-Schema-Test-Suite"
repository = "https://github.com/macisamuele/json-schema-test-suite-rs"
documentation = "http://docs.rs/json-schema-test-suite-test-case"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
